examples/test/testpolicy10672.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10672
  namespace: namespace378
spec:
  podSelector:
    matchLabels:
      key40: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value34
          key1: value27
      podSelector:
        matchLabels:
          key26: value18
          key29: value22
